--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -55,7 +55,7 @@
 </style>
 <!-- header -->
 <header>
-    <div class="row">
+    <div class="rowfront">
         <div class="col-lg-3 col-md-3">
             <div class="header__logo">
                 <a href="/">
@@ -112,7 +112,7 @@
         </div>
         
     </div>
-    <div class="row">
+    <div class="rowfront">
         <div class="col-lg-3 col-md-3">
             <div class="header__logo">
                 <a href="/">
