--- a/views/user/verify-otp.ejs
+++ b/views/user/verify-otp.ejs
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>verify-your-email</title>
+    <!-- <title>Nike. Just Do It.Nike IN</title> -->
+    <link rel="icon" href="/img/favicon.ico" type="image/png" sizes="32x32">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700;800;900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" />
