--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -592,25 +592,26 @@ pre code {
   margin-right: auto;
   margin-left: auto;
 }
-
-.row {
+.rowfront {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+}
+.rowfront {
   display: flex;
   flex-wrap: wrap;
 
 
 }
 
-.row {
+.rowfront {
   display: flex;
   justify-content: space-between; /* Distribute space between the left and right items */
   align-items: center; /* Vertically center items */
   padding-left: 15px;
 
 }
-.col-lg-3, .col-md-3 {
-  display: flex;
-  align-items: center; /* Vertically center items in the column */
-}
+
 
 .header__logo {
   flex-shrink: 0; /* Prevent logo from shrinking */
@@ -662,7 +663,15 @@ pre code {
   display: inline-block;
 }
 
-
+.row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+}
 
 .no-gutters {
   margin-right: 0;
