--- a/views/partials/admin/header.ejs
+++ b/views/partials/admin/header.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Nike ADMIN</title>
+    <link rel="icon" href="/img/favicon.ico" type="image/png" sizes="32x32">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -67,7 +68,7 @@ body {
                 <button class="btn btn-icon btn-aside-minimize"> <i class="text-muted material-icons md-menu_open"></i> </button>
             </div>
         </div>
-        <nav>
+        <nav class="sticky-top">
             <ul class="menu-aside">
                 <li class="menu-item">
                     <a class="menu-link" href="/admin"> <i class="icon material-icons md-home"></i>
@@ -86,10 +87,10 @@ body {
                     </a>
 
                 </li>
-                <!-- <li class="menu-item">
-                    <a class="menu-link" href="/admin/brands"> <i class="icon material-icons md-stars"></i>
-                        <span class="text">Brands</span> </a>
-                </li> -->
+                <li class="menu-item">
+                    <a class="menu-link" href="/admin/offers"> <i class="icon material-icons md-stars"></i>
+                        <span class="text">offers</span> </a>
+                </li>
                 <li class="menu-item">
                     <a class="menu-link" href="/admin/addProducts"> <i class="icon material-icons md-add_box"></i>
                         <span class="text">Add product</span>
@@ -102,7 +103,7 @@ body {
                 </li>
             
                 <li class="menu-item">
-                    <a class="menu-link" href="/admin/coupon"> <i class="icon material-icons md-class"></i>
+                    <a class="menu-link" href="/admin/coupons"> <i class="icon material-icons md-class"></i>
                         <span class="text">Coupon</span> </a>
                 </li>
                 <li class="menu-item">
@@ -115,6 +116,14 @@ body {
                         <span class="text">Orders</span>
                     </a>
                 </li>
+
+                <li class="menu-item">
+                    <a class="menu-link" href="/admin/sales-report">
+                        <i class="icon material-icons md-trending_up"></i> <!-- Replace with a 'perfect' icon -->
+                        <span class="text">Sales</span>
+                    </a>
+                </li>
+                
             </ul>
         </nav>
     </aside>
