--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Signup - E-Commerce</title>
+    <title>Nike. Just Do It.Nike IN</title>
+    <link rel="icon" href="/img/favicon.ico" type="image/png" sizes="32x32">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3z4k6LF2jFE9K2W8g3bKn6iVj6N3hN5zRV43VXl2mAf+3BvN2ae6fzpaN8c4k/0B9Zoh4vtu0O/ZUNqVJ7g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="css/fontawesome-all.css" rel="stylesheet">
